added description meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image" href="./assets/spaço7Logo.png" />
 
+    <meta
+      name="description"
+      content="Spaço7 é um Spa que oferece serviços de bem-estar e cuidados pessoais. Os principais serviços são massagem, depilação, naturopatia e terapia capilar integrativa"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
